--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-lazy-load": "^4.0.1",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
